--- a/server/.env.example
+++ b/server/.env.example
@@ -6,3 +6,12 @@ AGORA_TOKEN_EXPIRE_SECONDS=3600
 
 # Server port
 PORT=5000
+
+# Comma-separated list of allowed origins for CORS
+# Example: http://localhost:3000,https://hospital-kohl-ten.vercel.app
+CORS_ORIGINS=http://localhost:3000,https://hospital-kohl-ten.vercel.app
+
+# MongoDB connection string (replace with your Atlas URI or local URI)
+# Example local: mongodb://localhost:27017/hospitaldb
+# Example Atlas: mongodb+srv://<user>:<password>@cluster0.mongodb.net/hospitaldb?retryWrites=true&w=majority
+MONGO_URI=mongodb://localhost:27017/hospitaldb
