--- a/server/package.json
+++ b/server/package.json
@@ -16,11 +16,14 @@
   "dependencies": {
     "agora-chat": "^1.3.1",
     "agora-token": "^2.0.5",
+    "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
-    "mongodb": "^7.0.0"
+    "mongodb": "^7.0.0",
+    "mongoose": "^7.8.7"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.19",
     "@types/express": "^5.0.5",
     "@types/node": "^24.10.1",
     "@typescript-eslint/eslint-plugin": "^8.46.4",
